horizontal overflow fix
made the invisible boxes narrower so they won't overflow the page and create horizontal scroll bars.

a few other small tweaks that made no difference to the product, just getting my code up to code.

--- a/css/style.css
+++ b/css/style.css
@@ -58,9 +58,9 @@ h2 {
 
 .invisible-box {
   position: absolute;
-  width: 140%;
+  width: 114%;
   height: 140%;
-  left: -20%;
+  left: -7%;
   top: -20%;
 }
 
